media tags are fleshed and empty stylesheet is not linked in the head

--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
   <head>
     <title>Excursion</title>
     <meta charset="utf-8">
+    <link rel = 'stylesheet' href = "resources/css/style.css">
   </head>
 
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <a>Download Excursion (Coming soon!)</h4>
-    <img src="" alt="">
+    <a>Download Excursion (Coming soon!)</a>
+    <video src="resources/stock_video.mp4" autoplay muted>
+      Your browser does not support this video.
+    </video>
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-    <img src="" alt="">
-    <img src="" alt="">
+    <img src="resources/landscape.jpg" alt="camping">
+    <img src="resources/cellphone.png" alt="cellphone icon">
     <h2>Coming Soon for iPhone and Android</h2>
     <a>Download Excursion (Coming soon!)</a>
   </body>
