media elements aligned to centre, footer inserted into html code and aligned right

--- a/index.html
+++ b/index.html
@@ -9,14 +9,21 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <a>Download Excursion (Coming soon!)</a>
-    <video src="resources/stock_video.mp4" autoplay muted>
+
+    <video src="resources/stock_video.mp4" autoplay muted loop>
       Your browser does not support this video.
     </video>
+
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+
     <img src="resources/landscape.jpg" alt="camping">
     <img src="resources/cellphone.png" alt="cellphone icon">
     <h2>Coming Soon for iPhone and Android</h2>
     <a>Download Excursion (Coming soon!)</a>
+
+    <footer>
+      &copy; Excursion
+    </footer>
   </body>
 </html>
